Index file added mensaje random

--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
   <title>Document</title>
 </head>
 <body>
-  
+  <h1>Hola</h1>
+  <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Quia excepturi deleniti corporis nobis nisi laboriosam architecto minima ullam nulla amet ipsum aspernatur pariatur, atque maiores. Aspernatur enim similique optio corrupti.</p>
 </body>
 </html>
